# switch-test-framework

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
framework/reporting/: report_generator.py
framework/reporting/templates/: report.html
framework/telemetry/: cisco_snmp.py
framework/tests/: functional.py  rfc2544.py  test_rfc2544.py  test_scapy_engine.py
framework/traffic/: iperf3_engine.py  scapy_capture.py  scapy_engine.py  scapy_send.py
plans/: iperf3_engine.md  report_gen.md  scapy_engine.md  tests.md
telemetry/: cisco_snmp.py
