[project]
name = "network-test-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "easysnmp>=0.2.6",
    "iperf3>=0.1.11",
    "napalm>=5.1.0",
    "netmiko>=4.6.0",
    "paramiko>=4.0.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.7",
    "scapy>=2.7.0",
]
